--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
         </ul>
       </nav>
     </header>
+
+    <footer>
+      <ul>
+        <li>instagram</li>
+        <li>telegram</li>
+      </ul>
+    </footer>
   </body>
 </html>
